--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 <head>
     <title>Página de Consulta</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>Consulta de Dados</h1>
-    <input type="text" id="consultaInput" placeholder="Digite o dado a pesquisar">
-    <button onclick="pesquisar()">Pesquisar</button>
+    <div class="form">
+        <input type="text" id="consultaInput" placeholder="Digite o dado a pesquisar">
+        <button onclick="pesquisar()">Pesquisar</button>
+    </div>
     <div id="resultado"></div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
