--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <h1>Consulta de Dados</h1>
     <div class="form">
         <input type="text" id="consultaInput" placeholder="Digite o dado a pesquisar">
-        <button onclick="pesquisar()">Pesquisar</button>
+        <button onclick="exibirTexto()">Pesquisar</button>
     </div>
-    <div id="resultado"></div>
     
     <script src="script.js"></script>
 </body>
