--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <h1>Consulta de Dados</h1>
     <div class="form">
-        <input type="text" id="consultaInput" placeholder="Digite o dado a pesquisar">
-        <button onclick="exibirTexto()">Pesquisar</button>
+        <input type="text" id="consultaInput" placeholder="Digite a Placa a pesquisar">
+        <button onclick="pesquisar()">Pesquisar</button>
     </div>
+    <div id="resultado"></div>
     
     <script src="script.js"></script>
 </body>
