--- a/index.html
+++ b/index.html
@@ -1,19 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Consulta</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.6/css/jquery.dataTables.min.css">
+    <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.6/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
-    <h1>Consulta de Dados</h1>
-    <div class="form">
-        <input type="text" id="consultaInput" placeholder="Digite a Placa a pesquisar">
-        <button onclick="pesquisar()">Pesquisar</button>
-    </div>
-    <div id="resultado"></div>
-    
-    <script src="script.js"></script>
+    <h1>Consulta</h1>
+    <form>
+        <label for="termo_pesquisa">Digite a placa a ser pesquisada:</label>
+        <input type="text" name="termo_pesquisa" id="termo_pesquisa" required>
+        <br>
+        <input type="button" value="Pesquisar" onclick="realizarPesquisa()">
+    </form>
+
+    <h2>Resultado da pesquisa:</h2>
+    <table id="tabela_resultado" class="display">
+        <thead>
+            <tr>
+                <th>Coluna 1</th>
+                <th>Coluna 2</th>
+                <th>Coluna 3</th>
+                <!-- Adicione mais colunas conforme necessário -->
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+
+    <script>
+        var tabela;
+
+        function realizarPesquisa() {
+            const termoPesquisa = document.querySelector('#termo_pesquisa').value;
+
+            // Realize a pesquisa na planilha publicada usando o link fornecido
+            $.get("https://docs.google.com/spreadsheets/d/e/2PACX-1vRul4T7a8YGSZ5OONIujRqCV-ro-pZtGpLd-dEmmnxBQ7YMEfBV8I2Xssawiv4fLHKkilZd2YEBHx5R/pub?gid=0&single=true&output=csv", function(data) {
+                var linhas = data.split('\n');
+                var resultado = [];
+
+                for (var i = 0; i < linhas.length; i++) {
+                    var colunas = linhas[i].split(',');
+                    if (colunas[5] === termoPesquisa) { // Coluna 5 corresponde a "Placa"
+                        resultado.push(colunas);
+                    }
+                }
+
+                if (resultado.length > 0) {
+                    if (tabela) {
+                        tabela.destroy();
+                    }
+
+                    tabela = $('#tabela_resultado').DataTable({
+                        data: resultado,
+                        columns: [
+                            { title: "Coluna 1" },
+                            { title: "Coluna 2" },
+                            { title: "Coluna 3" },
+                            // Adicione mais colunas conforme necessário
+                        ]
+                    });
+                } else {
+                    if (tabela) {
+                        tabela.destroy();
+                    }
+                    document.querySelector('#tabela_resultado tbody').innerHTML = "<tr><td colspan='3'>Nenhum resultado encontrado.</td></tr>";
+                }
+            });
+        }
+    </script>
 </body>
 </html>
