--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Consulta</h1>
     <form>
-        <label for="termo_pesquisa">Digite a placa a ser pesquisada:</label>
+        <label for="termo_pesquisa">Digite a placa:</label>
         <input type="text" name="termo_pesquisa" id="termo_pesquisa" required>
         <br>
         <input type="button" value="Pesquisar" onclick="realizarPesquisa()">
