--- a/index.html
+++ b/index.html
@@ -1,81 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Página de Consulta OK</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.6/css/jquery.dataTables.min.css">
-    <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.6/js/jquery.dataTables.min.js"></script>
+    <title>Pesquisa de Placa</title>
 </head>
 <body>
-    <h1>Consulta</h1>
-    <form>
-        <label for="termo_pesquisa">Digite a placa:</label>
-        <input type="text" name="termo_pesquisa" id="termo_pesquisa" required>
-        <br>
-        <input type="button" value="Pesquisar" onclick="realizarPesquisa()">
-    </form>
-
-    <h2>Resultado da pesquisa:</h2>
-    <table id="tabela_resultado" class="display">
-        <thead>
-            <tr>
-                <th>Coluna 1</th>
-                <th>Coluna 2</th>
-                <th>Coluna 3</th>
-                <!-- Adicione mais colunas conforme necessário -->
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+    <h1>Pesquisa de Placa</h1>
+    <label for="placa">Digite a placa:</label>
+    <input type="text" id="placa" placeholder="Ex: OVQ-6650">
+    <button id="pesquisar">Pesquisar</button>
+    <div id="resultado"></div>
 
     <script>
-        var tabela;
+        document.getElementById("pesquisar").addEventListener("click", function () {
+            var placa = document.getElementById("placa").value;
+            if (placa.trim() === "") {
+                alert("Por favor, digite uma placa.");
+                return;
+            }
 
-        function realizarPesquisa() {
-            const termoPesquisa = document.querySelector('#termo_pesquisa').value;
+            var xhr = new XMLHttpRequest();
+            xhr.open("GET", "seu_script_python.py?placa=" + placa, true);
 
-            // Realize a pesquisa na planilha publicada usando o link fornecido
-            $.get("https://docs.google.com/spreadsheets/d/e/2PACX-1vRul4T7a8YGSZ5OONIujRqCV-ro-pZtGpLd-dEmmnxBQ7YMEfBV8I2Xssawiv4fLHKkilZd2YEBHx5R/pub?gid=0&single=true&output=csv")
-            .done(function(data) {
-                var linhas = data.split('\n');
-                var resultado = [];
-
-                for (var i = 0; i < linhas.length; i++) {
-                    var colunas = linhas[i].split(',');
-                    if (colunas[5] === termoPesquisa) { // Coluna 5 corresponde a "Placa"
-                        resultado.push(colunas);
-                    }
-                }
-
-                if (resultado.length > 0) {
-                    if (tabela) {
-                        tabela.destroy();
-                    }
-
-                    tabela = $('#tabela_resultado').DataTable({
-                        data: resultado,
-                        columns: [
-                            { title: "Coluna 1" },
-                            { title: "Coluna 2" },
-                            { title: "Coluna 3" },
-                            // Adicione mais colunas conforme necessário
-                        ]
-                    });
+            xhr.onload = function () {
+                if (xhr.status === 200) {
+                    document.getElementById("resultado").innerHTML = xhr.responseText;
                 } else {
-                    if (tabela) {
-                        tabela.destroy();
-                    }
-                    document.querySelector('#tabela_resultado tbody').innerHTML = "<tr><td colspan='3'>Nenhum resultado encontrado.</td></tr>";
+                    alert("Ocorreu um erro na solicitação.");
                 }
-            })
-            .fail(function() {
-                if (tabela) {
-                    tabela.destroy();
-                }
-                document.querySelector('#tabela_resultado tbody').innerHTML = "<tr><td colspan='3'>Erro ao conectar à planilha.</td></tr>";
-            });
-        }
+            };
+
+            xhr.send();
+        });
     </script>
 </body>
 </html>
