--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <title>App Frota</title>
 </head>
 <body>
-    <h1>Consulta</h1>
+    <h1>App Frota - Consulta</h1>
 
     <form id="search-form">
         <input type="radio" id="search-type-placa" name="search-type" value="placa" checked>
-        <label for="search-type-placa">Pesquisar por Placa</label>
-        <br> <!-- Adicione uma quebra de linha aqui -->
+        <label for="search-type-placa">Pesquisar por Placa</label>        
         <input type="radio" id="search-type-numero-ordem" name="search-type" value="numero_ordem">
         <label for="search-type-numero-ordem">Pesquisar por Número de Ordem</label>
         
         <br> <!-- Adicione outra quebra de linha aqui -->
         
         <label for="term">Digite a placa ou número de ordem:</label>
+        <br> <!-- Adicione outra quebra de linha aqui -->
         <input type="text" id="term" name="term" required>
         <button type="submit">Pesquisar</button>
     </form>
