--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <h1>App Frota - Consulta</h1>
 
     <form id="search-form">
+        <label for="term">Tipo de Pesquisa:</label>
         <input type="radio" id="search-type-placa" name="search-type" value="placa" checked>
-        <label for="search-type-placa">Pesquisar por Placa</label>        
+        <label for="search-type-placa">Placa</label>        
         <input type="radio" id="search-type-numero-ordem" name="search-type" value="numero_ordem">
-        <label for="search-type-numero-ordem">Pesquisar por Número de Ordem</label>
+        <label for="search-type-numero-ordem">Número de Ordem</label>
         
+        <br> <!-- Adicione outra quebra de linha aqui -->
         <br> <!-- Adicione outra quebra de linha aqui -->
         
         <label for="term">Digite a placa ou número de ordem:</label>
