--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>App Frota</title>
 </head>
 <body>
-    <h1>App Frota - Consulta</h1>
+    <h1>Consulta</h1>
 
     <form id="search-form">
         <label for="term">Tipo de Pesquisa:</label>
@@ -23,8 +23,6 @@
 
         <br> <!-- Adicione outra quebra de linha aqui -->
         <br> <!-- Adicione outra quebra de linha aqui -->
-
-        <label for="term">Resultado:</label>
         
     </form>
 
@@ -70,10 +68,24 @@
 
                     if (foundVehicle) {
                         resultDiv.innerHTML = "Informações do veículo com " + (searchType === "placa" ? "placa" : "número de ordem") + " " + term + ":<br>";
+                        resultDiv.innerHTML += "Nº Ordem: " + foundVehicle.n_ordem + "<br>";
+                        resultDiv.innerHTML += "Nº Anterior: " + foundVehicle.n_anterior + "<br>";
+                        resultDiv.innerHTML += "Empresa: " + foundVehicle.empresa + "<br>";
                         resultDiv.innerHTML += "Unidade: " + foundVehicle.unidade + "<br>";
-                        resultDiv.innerHTML += "Chassi: " + foundVehicle.chassi + "<br>";
-                        resultDiv.innerHTML += "Renavam: " + foundVehicle.renavam + "<br>";
-                        resultDiv.innerHTML += "Tipo: " + foundVehicle.tipo_veiculo + "<br>";
+                        resultDiv.innerHTML += "Placa:   " + foundVehicle.placa + "<br>";
+                        resultDiv.innerHTML += "Chassi:  " + foundVehicle.chassi + "<br>";
+                        resultDiv.innerHTML += "Cap:     " + foundVehicle.cap + "<br>";
+                        resultDiv.innerHTML += "Fab: " + foundVehicle.ano_fab + "<br>";
+                        resultDiv.innerHTML += "Mod: " + foundVehicle.ano_mod + "<br>";
+                        resultDiv.innerHTML += "Tipo Veiculo: " + foundVehicle.tipo_veiculo + "<br>";
+                        resultDiv.innerHTML += "Tipo Frota: " + foundVehicle.tipo_frota + "<br>";
+                        resultDiv.innerHTML += "Modelo: " + foundVehicle.modelo + "<br>";
+                        resultDiv.innerHTML += "Carroceria: " + foundVehicle.carroceira + "<br>";
+                        resultDiv.innerHTML += "Cor: " + foundVehicle.cor + "<br>";
+                        resultDiv.innerHTML += "Municipio: " + foundVehicle.municipio + "<br>";
+                        resultDiv.innerHTML += "CNPJ: " + foundVehicle.cnpj + "<br>";
+                        resultDiv.innerHTML += "Placa Anterior: " + foundVehicle.placa_anterior + "<br>";
+                        resultDiv.innerHTML += "Sub Unidade: " + foundVehicle.sub_unidade + "<br>";
                     } else {
                         resultDiv.innerHTML = "Nenhum veículo com " + (searchType === "placa" ? "placa" : "número de ordem") + " " + term + " foi encontrado na planilha.";
                     }
