--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                         resultDiv.innerHTML += "CNPJ: " + foundVehicle.cnpj + "<br>";
                         resultDiv.innerHTML += "Placa Anterior: " + foundVehicle.placa_anterior + "<br>";
                         resultDiv.innerHTML += "Sub Unidade: " + foundVehicle.sub_unidade + "<br>";
+                        resultDiv.innerHTML += "CNPJ: " + foundVehicle.cnpj + "<br>";
                     } else {
                         resultDiv.innerHTML = "Nenhum veículo com " + (searchType === "placa" ? "placa" : "número de ordem") + " " + term + " foi encontrado na planilha.";
                     }
