--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 alert("Senha incorreta. Tente novamente.");
             }
         }
-
+            
         // Adicione um manipulador de eventos para o formulário de login
         document.getElementById("login-form").addEventListener("submit", function (e) {
             e.preventDefault();
@@ -87,8 +87,9 @@
             var resultDiv = document.getElementById("result");
 
             // URL pública da planilha no formato CSV
-            var url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRul4T7a8YGSZ5OONIujRqCV-ro-pZtGpLd-dEmmnxBQ7YMEfBV8I2Xssawiv4fLHKkilZd2YEBHx5R/pub?output=csv";
-
+            // var url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRul4T7a8YGSZ5OONIujRqCV-ro-pZtGpLd-dEmmnxBQ7YMEfBV8I2Xssawiv4fLHKkilZd2YEBHx5R/pub?output=csv";
+            const spreadsheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRul4T7a8YGSZ5OONIujRqCV-ro-pZtGpLd-dEmmnxBQ7YMEfBV8I2Xssawiv4fLHKkilZd2YEBHx5R/pub?output=csv"; // Substitua pelo URL real
+            
             fetch(url)
                 .then(response => response.text())
                 .then(csvData => {
