--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             // var url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRul4T7a8YGSZ5OONIujRqCV-ro-pZtGpLd-dEmmnxBQ7YMEfBV8I2Xssawiv4fLHKkilZd2YEBHx5R/pub?output=csv";
             const spreadsheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRul4T7a8YGSZ5OONIujRqCV-ro-pZtGpLd-dEmmnxBQ7YMEfBV8I2Xssawiv4fLHKkilZd2YEBHx5R/pub?output=csv"; // Substitua pelo URL real
             
-            fetch(url)
+            fetch(spreadsheetUrl)
                 .then(response => response.text())
                 .then(csvData => {
                     // Parse CSV data into an array of objects
