--- a/index.html
+++ b/index.html
@@ -42,18 +42,20 @@
     </div>
 
     <script>
-        // Função para verificar a senha na aba "Senha"
+        // Função para verificar a senha na aba "Acesso" e na coluna "senha"
         function checkPasswordInSheet(password) {
-            // URL pública da planilha na aba "Senha" no formato CSV
-            var url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRul4T7a8YGSZ5OONIujRqCV-ro-pZtGpLd-dEmmnxBQ7YMEfBV8I2Xssawiv4fLHKkilZd2YEBHx5R/pub?gid=1343551425&single=true&output=csv";
+            // URL pública da planilha na aba "Acesso" no formato CSV
+            var url = "https://docs.google.com/spreadsheets/d/e/1J2WQpoDrOin3a8CfkQDIo8YUv2ZFXBhB7NOM32JyYdA/gviz/tq?tqx=out:csv&sheet=Acesso";
         
             return fetch(url)
                 .then(response => response.text())
                 .then(csvData => {
                     // Parse CSV data into an array of passwords
                     var lines = csvData.split("\n");
+                    var headers = lines[0].split(",");
+                    var passwordIndex = headers.indexOf("senha"); // Encontra o índice da coluna "senha"
                     var passwords = lines.slice(1); // Ignorar o cabeçalho
-                    return passwords;
+                    return passwords.map(line => line.split(",")[passwordIndex]);
                 });
         }
         
