--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>App Frota - Login</title>
 </head>
 <body>
-    <h2>Acesso Restrito</h2>
+    <h2>Acesso Restrito.</h2>
 
     <form id="login-form">
         <label for="password">Senha:</label>
