--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         // Função para verificar a senha na aba "Acesso" e na coluna "senha"
         function checkPasswordInSheet(password) {
             // URL pública da planilha na aba "Acesso" no formato CSV
-            var url = "https://docs.google.com/spreadsheets/d/e/1J2WQpoDrOin3a8CfkQDIo8YUv2ZFXBhB7NOM32JyYdA/gviz/tq?tqx=out:csv&sheet=Acesso";
+            var url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRul4T7a8YGSZ5OONIujRqCV-ro-pZtGpLd-dEmmnxBQ7YMEfBV8I2Xssawiv4fLHKkilZd2YEBHx5R/pub?gid=1343551425&single=true&output=csv";
         
             return fetch(url)
                 .then(response => response.text())
