--- a/index.html
+++ b/index.html
@@ -167,7 +167,12 @@
                             resultDiv.innerHTML += "Municipio: " + foundVehicle.municipio + "<br>";
                             resultDiv.innerHTML += "CNPJ: " + foundVehicle.cnpj + "<br>";
                             resultDiv.innerHTML += "Placa Anterior: " + foundVehicle.placa_anterior + "<br>";
-                            resultDiv.innerHTML += "Sub Unidade: " + foundVehicle.sub_unidade + "<br>";                              
+                            resultDiv.innerHTML += "Sub Unidade: " + foundVehicle.sub_unidade + "<br>";
+                            resultDiv.innerHTML += "CRLV Atual: " + foundVehicle.crlv_atual + "<br>";
+                            resultDiv.innerHTML += "Situação CRLV: " + foundVehicle.crlv_emissao + "<br>";
+                            resultDiv.innerHTML += "Grupo Frota: " + foundVehicle.grupo_frota + "<br>";
+                            resultDiv.innerHTML += "Destino Veículo: " + foundVehicle.destino_veiculo + "<br>";
+                            resultDiv.innerHTML += "Status OP: " + foundVehicle.status_operacao + "<br>";
                             resultDiv.innerHTML += "<br>"; // Separe cada veículo com uma linha em branco
                         });
                     } else {
